<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="item1">Look at my GUI</string>
    <string name="item2">CLICK HERE</string>
    <string name="item3">Check this out!</string>
    <string name="item4">Switch on/off</string>
    <string name="item5">Type here!</string>
    <string name="emailAddress">Enter your email address:</string>
    <string name="userInput1">Type email here</string>
    <string name="typePassword">Type your password:</string>
    <string name="buttonLogin">LOGIN</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="inputName">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="userEmail">Enter your email</string>
    <string name="yourPicture">Your picture:</string>
    <string name="clickButton">Click the button above to take a picture</string>
    <string name="buttonsend">Send</string>
    <string name="buttonreceive">Receive</string>
    <string name="typehint">Type here</string>
    <string name="chatButton">Go to chat</string>
    <string name="weatherButton">Weather Forecast</string>
    <string name="toolbarButton">Go to Toolbar page</string>
    <string name="title_choice1">Choice1</string>
    <string name="title_choice2">Choice2</string>
    <string name="title_choice3">Choice3</string>
    <string name="title_choice4">Choice4</string>
    <string name="undo_string">UNDO</string>
    <string name="toast_string">You clicked on the overflow menu</string>
</resources>
