<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/yourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/yourProfile" />

    <TextView
        android:id="@+id/yourName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/yourName" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputName" />

    <TextView
        android:id="@+id/yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourEmail" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/userEmail" />

    <TextView
        android:id="@+id/yourPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourPicture" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame" />


    <TextView
        android:id="@+id/clickButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clickButton" />

</LinearLayout>