<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/item1"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/item2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item3"
        android:layout_column="1"
        android:layout_row="1"/>

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_column="0"
        android:layout_row="2" />


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/item4"
        android:layout_column="1"
        android:layout_row="2"/>

    <EditText
        android:id="@+id/inputtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item5"
        android:inputType="textPersonName"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="3"/>
</GridLayout>