<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1"
        android:layout_alignParentLeft="true"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_gravity="fill"
        android:text="@string/item2" />

    <CheckBox android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/textview1"
        android:layout_toRightOf="@id/button2"
        android:layout_alignParentRight="true"
        android:text="@string/item3" />

    <ImageButton android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/button2"
        android:src="@drawable/flag" />


    <Switch android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_below="@+id/button2"
        android:layout_toRightOf="@id/button3"
        android:text="@string/item4" />

    <EditText android:id="@+id/inputtext"
        android:hint="@string/item5"
        android:inputType="textPersonName"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>